ec2.tf
# Create a new instance of the latest Ubuntu 18.04 on an
# t2.micro node with an AWS Tag naming it "HelloWorld"

data "aws_ami" "ubuntu18_04" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-bionic-18.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

resource "aws_instance" "wordpress" {
    ami           = data.aws_ami.ubuntu18_04.id
    instance_type = "t2.micro"
    subnet_id = aws_subnet.publicServersSN.id
    vpc_security_group_ids = [aws_security_group.pbm-publicServersSG.id]
    iam_instance_profile = aws_iam_instance_profile.ec2ssm2.name
    key_name = "pbm_dso_macos"

    tags = {
      Name = "Wordpress"
    }
}

resource "aws_instance" "bastionSSH" {
    ami           = data.aws_ami.ubuntu18_04.id
    instance_type = "t2.micro"
    subnet_id = aws_subnet.bastionSN.id
    vpc_security_group_ids = [aws_security_group.pbm-bastionSG.id]
    iam_instance_profile = aws_iam_instance_profile.ec2ssm2.name
    key_name = "pbm_dso_macos"

    tags = {
      Name = "bastionSSH"
    }
}
