igw.tf
resource "aws_internet_gateway" "pbmigw"{
    vpc_id = aws_vpc.tf_patobolamacaco_vpc.id
}
