natgw.tf
resource "aws_nat_gateway" "pbmnatgw"{
    allocation_id = aws_eip.pbmeip2.id
    subnet_id = aws_subnet.bastionSN.id
}
