subnets.tf
resource "aws_subnet" "bastionSN"{
    vpc_id = aws_vpc.patobolamacaco_vpc.id
    cidr_block = "10.0.2.0/24"
    map_public_ip_on_launch = "true"

    tags = {
        Name = "bastionSN"
    }
}

resource "aws_subnet" "publicServersSN"{
    vpc_id = aws_vpc.patobolamacaco_vpc.id
    cidr_block = "10.0.0.0/24"
    map_public_ip_on_launch = "false"

    tags = {
        Name = "bastionSN"
    }
}

resource "aws_subnet" "privateServersSN"{
    vpc_id = aws_vpc.patobolamacaco_vpc.id
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = "false"

    tags = {
        Name = "bastionSN"
    }
}
