routetables.tf
resource "aws_route_table" "pbm-publicServersRT" {
    vpc_id = aws_vpc.patobolamacaco_vpc.id
    
    route{
        cidr_block = "0.0.0.0/16"
        gateway_id = aws_nat_gateway.pbmnatgw.id
    }
    
    tags = {
        Name = "PBM-publicServersRT"
    }
}

resource "aws_route_table" "pbm-privateServersRT" {
    vpc_id = aws_vpc.patobolamacaco_vpc.id
    
    route{
        cidr_block = "0.0.0.0/16"
        gateway_id = aws_nat_gateway.pbmnatgw.id
    }

    tags = {
        Name = "PBM-privateServersRT"
    }
}

resource "aws_route_table" "pbm-bastionRT" {
    vpc_id = aws_vpc.patobolamacaco_vpc.id
    
    route{
        cidr_block = "0.0.0.0/16"
        gateway_id = aws_internet_gateway.pbmigw.id
    }

    tags = {
        Name = "PBM-bastionRT"
    }
}
