securitygroups.tf
resource "aws_security_group" "pbm-firewallSG"{
    vpc_id = aws_vpc.patobolamacaco_vpc.id
    name = "PBM-firewallSG"
    description = "Allows communication with both the Public and Private SNs"
    
    tags = {
        Name = "PBM-firewallSG"
    }
}

resource "aws_security_group" "pbm-publicServersSG"{
    vpc_id = aws_vpc.patobolamacaco_vpc.id
    name = "PBM-publicServersSG"
    description = "Allows communication with DMZ public servers"

    ingress{
        cidr_blocks = ["0.0.0.0/0"]
        from_port = 0
        to_port = 0
        protocol = -1
    }

    egress{
        cidr_blocks = ["0.0.0.0/0"]
        from_port = 0
        to_port = 0
        protocol = -1
    }

    tags = {
        Name = "PBM-publicServersSG"
    }
}

resource "aws_security_group" "pbm-privateServersSG"{
    vpc_id = aws_vpc.patobolamacaco_vpc.id
    name = "PBM-privateServersSG"
    description = "Allows communication with private servers"

    ingress{
        security_groups = [aws_security_group.pbm-firewallSG.id]
        from_port = 0
        to_port = 0
        protocol = -1
    }

    egress{
        cidr_blocks = ["0.0.0.0/0"]
        from_port = 0
        to_port = 0
        protocol = -1
    }

    tags = {
        Name = "PBM-privateServersSG"
    }
}

resource "aws_security_group" "pbm-guacamoleSG"{
    vpc_id = aws_vpc.patobolamacaco_vpc.id
    name = "PBM-guacamoleSG"
    description = "Allows communication with specific ports for guacamole server"

    ingress{
        cidr_blocks = ["0.0.0.0/0"]
        from_port = 80
        to_port = 80
        protocol = "tcp"
    }
    ingress{
        cidr_blocks = ["0.0.0.0/0"]
        from_port = 443
        to_port = 443
        protocol = "tcp"
    }
    ingress{
        cidr_blocks = ["0.0.0.0/0"]
        from_port = 22
        to_port = 22
        protocol = "tcp"
    }

    egress{
        cidr_blocks = ["0.0.0.0/0"]
        from_port = 0
        to_port = 0
        protocol = -1
    }

    tags = {
        Name = "PBM-guacamoleSG"
    }
}

resource "aws_security_group" "pbm-kaliSG"{
    vpc_id = aws_vpc.patobolamacaco_vpc.id
    name = "PBM-kaliSG"
    description = "Allows communication with Kali attack server"

    ingress{
        cidr_blocks = ["0.0.0.0/0"]
        from_port = 0
        to_port = 0
        protocol = -1
    }

    egress{
        cidr_blocks = ["0.0.0.0/0"]
        from_port = 0
        to_port = 0
        protocol = -1
    }

    tags = {
        Name = "PBM-kaliSG"
    }
}

# Firewall SG rules were created to solve the cyclic dependency issue
resource "aws_security_group_rule" "pbm-firewallSG-rule-publicSG"{
    type = "ingress"
    source_security_group_id = aws_security_group.pbm-publicServersSG.id
    from_port = 0
    to_port = 0
    protocol = -1
    security_group_id = aws_security_group.pbm-firewallSG.id
}

resource "aws_security_group_rule" "pbm-firewallSG-rule-privateSG"{
    type = "ingress"
    source_security_group_id = aws_security_group.pbm-privateServersSG.id
    from_port = 0
    to_port = 0
    protocol = -1
    security_group_id = aws_security_group.pbm-firewallSG.id
}
